Stopped Buttons From Shifting All Elements

--- a/styling.css
+++ b/styling.css
@@ -25,20 +25,21 @@ body {
     background-color: #F1FF92;
     color: #888E5F;
     padding: 11px;
-    /*    margin-bottom: .5rem;*/
     box-shadow: 0px 4px #9da853;
 }
 
 #correct {
-    align-self: center;
+    order: 2;
     width: 5rem;
     font-size: 1.5rem;
     text-align: center;
     background-color: #42e252;
     color: white;
     padding: 11px;
-    margin-bottom: 1rem;
-    display: none;
+    position: absolute;
+    top: 100px;
+    left: 220px;
+    /*    display: none;*/
 }
 
 #wrong {
@@ -49,8 +50,10 @@ body {
     background-color: #de401a;
     color: white;
     padding: 11px;
-    margin-bottom: 1rem;
-    display: none;
+    position: absolute;
+    top: 100px;
+    left: 900px;
+    /*    display: none;*/
 }
 
 #question {
@@ -182,6 +185,20 @@ body {
     #timeRemaining {
         margin-top: 1rem;
     }
+
+    #wrong {
+        position: absolute;
+        top: 100px;
+        left: 628px;
+        width: 7rem;
+        font-size: 1.4rem;
+    }
+
+    #correct {
+        position: absolute;
+        top: 100px;
+        left: 100px;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -196,6 +213,20 @@ body {
     #timeRemaining {
         margin-top: 1rem;
     }
+
+    #wrong {
+        position: absolute;
+        top: 100px;
+        left: 610px;
+        width: 5rem;
+        font-size: 1.4rem;
+    }
+
+    #correct {
+        position: absolute;
+        top: 100px;
+        left: 90px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -209,6 +240,22 @@ body {
 
     #timeRemaining {
         margin-top: 1rem;
+    }
+
+    #wrong {
+        position: absolute;
+        top: 100px;
+        left: 595px;
+        width: 4rem;
+        font-size: 1rem;
+    }
+
+    #correct {
+        width: 4rem;
+        font-size: 1.3rem;
+        position: absolute;
+        top: 100px;
+        left: 90px;
     }
 }
 
@@ -251,6 +298,21 @@ body {
     #timeRemaining {
         margin-top: 1rem;
     }
+        #wrong {
+        position: absolute;
+        top: 100px;
+        left: 560px;
+        width: 4rem;
+        font-size: 1rem;
+    }
+
+    #correct {
+        width: 4rem;
+        font-size: 1.3rem;
+        position: absolute;
+        top: 100px;
+        left: 100px;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -265,6 +327,21 @@ body {
     #timeRemaining {
         margin-top: 1rem;
     }
+    #wrong {
+        position: absolute;
+        top: 100px;
+        left: 465px;
+        width: 3rem;
+        font-size: .9rem;
+    }
+
+    #correct {
+        width: 3rem;
+        font-size: 1rem;
+        position: absolute;
+        top: 100px;
+        left: 65px;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -278,6 +355,21 @@ body {
 
     #timeRemaining {
         margin-top: 1rem;
+    }
+    #wrong {
+        position: absolute;
+        top: 382px;
+        left: 340px;
+        width: 3rem;
+        font-size: .7rem;
+    }
+
+    #correct {
+        width: 3rem;
+        font-size: 1rem;
+        position: absolute;
+        top: 380px;
+        left: 65px;
     }
 }
 
@@ -298,6 +390,20 @@ body {
     #timeRemaining {
         margin-top: 1rem;
     }
+    #wrong {
+        position: absolute;
+        top: 382px;
+        left: 280px;
+        width: 3rem;
+        font-size: .7rem;
+    }
+
+    #correct {
+        width: 3rem;
+        font-size: 1rem;
+        position: absolute;
+        top: 380px;
+       
 }
 
 @media screen and (max-width: 376px) {
@@ -332,6 +438,21 @@ body {
 
     #timeRemaining {
         margin-top: 1rem;
+    }
+    #wrong {
+        position: absolute;
+        top: 382px;
+        left: 260px;
+        width: 3rem;
+        font-size: .7rem;
+    }
+
+    #correct {
+        width: 3rem;
+        font-size: 1rem;
+        position: absolute;
+        top: 380px;
+        left: 50px;
     }
 }
 
@@ -368,6 +489,21 @@ body {
     #timeRemaining {
         margin-top: 1rem;
     }
+    #wrong {
+        position: absolute;
+        top: 382px;
+        left: 240px;
+        width: 3rem;
+        font-size: .7rem;
+    }
+
+    #correct {
+        width: 3rem;
+        font-size: 1rem;
+        position: absolute;
+        top: 380px;
+        left: 50px;
+    }
 }
 
 @media screen and (max-width: 320px) {
@@ -381,6 +517,21 @@ body {
 
     #timeRemaining {
         margin-top: 1rem;
+    }
+    #wrong {
+        position: absolute;
+        top: 382px;
+        left: 216px;
+        width: 2.8rem;
+        font-size: .7rem;
+    }
+
+    #correct {
+        width: 2.5rem;
+        font-size: .7rem;
+        position: absolute;
+        top: 380px;
+        left: 40px;
     }
 }
 
